# wp_nav_controller

./: CMakeLists.txt  README.md  package.xml  setup.py
doc/: 处理逻辑.md
include/wp_nav_controller/: waypoint_navigator.h
launch/: navi_controller.launch  waypoint_navigation_go.launch  wp_nav_controller.launch  wpb_map_tool.launch
msg/: NavigationCommand.msg
rviz/: wp_nav.rviz
scripts/: README.md  nav_test.py  navigation_ui_node  test.py  test2.py  test3.py  waypoint_navi_go.py  wp_nav_controller_node
src/: waypoint_navigator.cpp  wp_nav_controller_node.cpp
src/wp_nav_controller/: __init__.py  move_base_client.py  navigation_control.py  sequence_navigation.py  waypoint_service.py  wp_nav_controller.py
src/wp_nav_controller/gui/: README.md  __init__.py  navigation_ui.py
srv/: NavigationCommand.srv  SequenceCommand.srv
